[Bugfix] Fixed multiple changes bug
Fixed case where there is multiple replacements in a diff. Now
is_content_in_framework will return all ranges that have have an
intersection. i.e. if there are two replacements in the same framework
function then a two tuples will be returned, where each tuple will
be paired with a framework fucntion reference, in this case the
framework function reference will be the same.

This way we can get all the changes that we need to make to a
particular framework function at once.

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libraries/boa-client-0.1.0/boa-client-0.1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Python 3.4.3 (C:\Program Files\Anaconda3\python.exe) interpreter library"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
